74410829 added subdomain supports

--- a/74410829-apache-react/httpd/httpd.conf
+++ b/74410829-apache-react/httpd/httpd.conf
@@ -549,19 +549,24 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-# Custom Reverse Proxy
+# Custom Reverse Proxy /w subdomains
 
+<VirtualHost *:80>
+ServerName react.sample.test
+RewriteEngine On
 ProxyPass "/" "http://react-frontend:3000/"
 ProxyPassReverse "/" "http://react-frontend:3000/"
+<Directory "/">
+    RewriteRule ^index\.html$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteRule . /index.html [L]
+</Directory>
+</VirtualHost>
 
-<IfModule mod_rewrite>
-
-  RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-l
-  RewriteRule . /index.html [L]
-
-</IfModule>
+<VirtualHost *:80>
+ServerName sample.test
+ProxyPass "/" "http://php-frontend:80/"
+ProxyPassReverse "/" "http://php-frontend:80/"
+</VirtualHost>
