--- a/74410829-apache-react/docker-compose.yaml
+++ b/74410829-apache-react/docker-compose.yaml
@@ -6,9 +6,39 @@ services:
       dockerfile: dockerfile
     ports:
       - 3000:3000
-  apache-httpd:
-    build:
-      context: ./httpd
-      dockerfile: dockerfile
+  php-frontend:
+    image: mediawiki:1.38.4
+    restart: always
     ports:
-      - 8080:80
+      - 5050:80
+  #   links:
+  #     - database
+  #   volumes:
+  #     - images:/var/www/html/images
+  # database:
+  #   image: mariadb
+  #   restart: always
+  #   environment:
+  #     # @see https://phabricator.wikimedia.org/source/mediawiki/browse/master/includes/DefaultSettings.php
+  #     MYSQL_DATABASE: my_wiki
+  #     MYSQL_USER: wikiuser
+  #     MYSQL_PASSWORD: example
+  #     MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+  #   volumes:
+  #     - db:/var/lib/mysql
+  # apache-httpd:
+  #   build:
+  #     context: ./httpd
+  #     dockerfile: dockerfile
+  #   ports:
+  #     - 8080:80
+  apache-httpd:
+    image: httpd:2.4-alpine
+    volumes:
+      - ./httpd/httpd.conf:/usr/local/apache2/conf/httpd.conf
+    ports:
+      - 80:80
+
+volumes:
+  images:
+  db:
